12-13 day, pause at work

--- a/lesson_7.ipynb
+++ b/lesson_7.ipynb
@@ -339,6 +339,432 @@
     "def allowed_driving(name, age):\n",
     "    print(f'{name} еще рано садиться за руль' if age < MIN_DRIVING_AGE else f'{name} может водить')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e94c136",
+   "metadata": {},
+   "source": [
+    "# 7.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10cd3522",
+   "metadata": {},
+   "source": [
+    "# 7.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "96687b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def count_args(*args):\n",
+    "    return len(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3dcc600b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def print_goods(*args):\n",
+    "    i = 1\n",
+    "    for elem in args:\n",
+    "        if type(elem) == str and len(elem) > 0:\n",
+    "            print(f'{i}. {elem}')\n",
+    "            i += 1\n",
+    "    if i == 1:\n",
+    "        print('Нет товаров')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d035749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def info_kwargs(**kwargs):\n",
+    "    for k, v in sorted(kwargs.items()):\n",
+    "        print(f'{k} = {v}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a2cec4",
+   "metadata": {},
+   "source": [
+    "# 7.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "53d8b0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1 2 3\n",
+      "3 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n, num_list = int(input()), list(map(int, input().split()))\n",
+    "print(*num_list[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a346fa46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n == 2:\n",
+    "        return 1\n",
+    "    elif n <= 1:\n",
+    "        return 0\n",
+    "    return fib(n - 1) + fib(n - 2)\n",
+    "\n",
+    "n = int(input()) + 1\n",
+    "print(fib(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1b99aed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def list_sum_recursive(args):\n",
+    "    if len(args) == 1:\n",
+    "        return args[0]\n",
+    "    return list_sum_recursive(args[1:]) + args[0]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "d3c5bd96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def flatten(spisok):\n",
+    "    res = []\n",
+    "    for elem in spisok:\n",
+    "        if isinstance(elem, list):\n",
+    "            res += flatten(elem)\n",
+    "        else:\n",
+    "            res.append(elem)\n",
+    "    return res  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "334761ee",
+   "metadata": {},
+   "source": [
+    "# 7.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3418d69c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Сортировка слиянием\n",
+    "\n",
+    "def merge_two_list(a, b):\n",
+    "    i = j = 0\n",
+    "    n, m = len(a), len(b)\n",
+    "    c = []\n",
+    "    while i < n and j < m:\n",
+    "        if a[i] < b[j]:\n",
+    "            c.append(a[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            c.append(b[j])\n",
+    "            j += 1\n",
+    "    if i < n:\n",
+    "        c += a[i:]\n",
+    "    else:\n",
+    "        c += b[j:]\n",
+    "    return c\n",
+    "\n",
+    "def merge_sort(s):\n",
+    "    if len(s) == 1:\n",
+    "        return s\n",
+    "    mid = len(s) // 2\n",
+    "    left = merge_sort(s[:mid])\n",
+    "    right = merge_sort(s[mid:])\n",
+    "    return merge_two_list(left, right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "52f44ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Быстрая сортировка\n",
+    "\n",
+    "def quick_sort(s):\n",
+    "    if len(s) < 2:\n",
+    "        return s\n",
+    "    mid = s[len(s) // 2]\n",
+    "    low = []\n",
+    "    high = []\n",
+    "    middle = []\n",
+    "    for elem in s:\n",
+    "        if elem < mid:\n",
+    "            low.append(elem)\n",
+    "        elif elem == mid:\n",
+    "            middle.append(elem)\n",
+    "        else:\n",
+    "            high.append(elem)\n",
+    "    return quick_sort(low) + middle + quick_sort(high)       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da10755",
+   "metadata": {},
+   "source": [
+    "# 7.11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8376744c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = '/home/alexey_minko/my_library'\n",
+    "\n",
+    "def rec_all_files(path, level = 1):\n",
+    "    print(f'Level = {level}, content: {os.listdir(path)}.')\n",
+    "    for elem in os.listdir(path):\n",
+    "        name = path + '/' + elem\n",
+    "        print(name, level)\n",
+    "        if os.path.isdir(name):\n",
+    "            print('Down.', name)\n",
+    "            rec_all_files(name, level + 1)\n",
+    "            print('Up', path)\n",
+    "            \n",
+    "def find_files(path, text):\n",
+    "    for elem in os.listdir(path):\n",
+    "        name = path + '/' + elem\n",
+    "\n",
+    "        if text in elem:\n",
+    "            print(name)\n",
+    "        elif os.path.isdir(name):\n",
+    "            find_files(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927eb5f9",
+   "metadata": {},
+   "source": [
+    "# 7.12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a3dc37a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "adding_10 = lambda x: x + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "40819dc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "starts_with = lambda string: string[0] == 'W'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f17a3421",
+   "metadata": {},
+   "source": [
+    "# 7.13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb70f6aa",
+   "metadata": {},
+   "source": [
+    "# 7.14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "92b39b41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def multiply(n):\n",
+    "    def inner(x):\n",
+    "        return n * x\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd968e16",
+   "metadata": {},
+   "source": [
+    "# 7.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f9ac76eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from time import perf_counter\n",
+    "\n",
+    "def timer_1():\n",
+    "    start = datetime.now()\n",
+    "    def inner():\n",
+    "        return datetime.now() - start\n",
+    "    return inner\n",
+    "\n",
+    "def timer_2():\n",
+    "    start = perf_counter()\n",
+    "    def inner():\n",
+    "        return perf_counter() - start\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd4abb25",
+   "metadata": {},
+   "source": [
+    "# 7.16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70925982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def say(name, surname, age):\n",
+    "    print('hello', name, surname, age)\n",
+    "\n",
+    "def decorator(func):\n",
+    "    def inner(*args, **kwargs):\n",
+    "        print('start decorator...')\n",
+    "        func(*args, **kwargs)\n",
+    "        print('finish decorator...')\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cd0a73e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def header(func):\n",
+    "    def inner(*args, **kwargs):\n",
+    "        print('<h1>')\n",
+    "        func(*args, **kwargs)\n",
+    "        print('</h1>')\n",
+    "    return inner\n",
+    "\n",
+    "def table(func):\n",
+    "    def inner(*args, **kwargs):\n",
+    "        print('<table>')\n",
+    "        func(*args, **kwargs)\n",
+    "        print('</table>')\n",
+    "    return inner\n",
+    "\n",
+    "@table\n",
+    "@header\n",
+    "@table\n",
+    "def say(name, surname, age):\n",
+    "    print('hello', name, surname, age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bcbfe99",
+   "metadata": {},
+   "source": [
+    "# 7.17"
+   ]
   }
  ],
  "metadata": {
